deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello2
  namespace: default
spec:
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-world
        image: hanuch556/helloimage:v1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"  
            memory: "256Mi"  
          limits:
            cpu: "400m"  
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
