service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: default
spec:
  selector:
    app: hello
  ports:
  - name: hello
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
